# NumerologProfNew

./: .gitignore  Technical_requirement.md  build_call_graph.sh  call_graph.gv  main.py  print_structure.sh  project_structure.txt  pyproject.toml  pyrightconfig.json  pytest.ini  result.json
business_logic/: analytic_class.py  arcanes_classes.py  star_triples_data.py
config/: settings.py
config/pages/: couple.json  dial.json  fullstar.json  predict.json  pythagorian_table.json  triangles.json
input_module/: input_data.py
latex_storage/: TODO.txt  health.tex  karmic_knots.tex  mission.tex  personality.tex  relationships_man.tex  relationships_woman.tex  spirituality.tex
report_storage/: font_colors_class.py  position_class.py
src/: full_star_old.py  main_reports.py  reports_collection.py
temp/: for_print.py
tests/:  test_arcanes_classes.py
utils/: data_to_text.py  log_utils.py  pdf_creator.py  pdf_utility.py  render_context_builder.py  transform_utils.py
